support dup search on multiple file info
